syntax = "proto3";
package contracts.shared;
option csharp_namespace = "gRPC.Contracts.Shared";

message ItemRequest {
	int32 id = 1;
}

message grpc_StringSearchCriteria {
    string search_field = 1;
	string search_criteria = 2;
    string order_by = 3;
	int32 page_number = 4;
	int32 page_size = 5;
    int32 skip = 6;
    int32 take = 7;    
}

message grpc_PagingParameters {
	int32 page_number = 1;
	int32 page_size = 2;
}

message CreateResponse {
	int32 id = 1;
}

message GenericResponse {
	bool success = 1;
}

message Empty {}